<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UpNxt!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sdk_version">SDK Version</string>
    <string name="show_version">Show Version</string>
    <string name="network_error_body">There is a problem connecting with the server. error: Authorization failed due to a network error</string>
    <string name="retry">Retry</string>
    <string name="invalid_credentials">There was an authentication error: Authorization failed - the API key + secret are invalid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="network_error_title">Network Error</string>
    <string name="auth_error">Auth Error</string>
    <string name="not_authorized">Not authorized to scan</string>
    <string name="title_activity_test">test</string>

    <string name="action_save">Save</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_product_details">ProductDetails</string>
    <string name="title_activity_user_details">User Profile</string>
    <string name="product_type">Product Type</string>
    <string name="product_name">Product Name</string>
    <string name="calories">Calories</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="sugar">Sugar</string>
    <string name="protein">Protein</string>
    <string name="vitamins">Vitamins</string>
    <string name="fat">Fat</string>
    <string name="suite">Good Choice</string>
    <string name="ingredients">Ingredients</string>
    <string name="user_required">User Name is required</string>
    <string name="mushroom">Mushroom</string>
    <string name="nuts">Nuts</string>
    <string name="rice">Rice</string>
    <string name="wheat">Wheat</string>
    <string name="poultry">Poultry</string>
    <string name="allergic_food">Allergic Food</string>
    <string name="serves">Serves</string>
    <string name="track_meal">Track your meal</string>
    <string name="fitbit_coming_soon">fitbit coming soon</string>
    <string name="add_to_cart_coming_soon">Add to cart is coming soon</string>
</resources>
